--- a/www/menu.html
+++ b/www/menu.html
@@ -63,6 +63,7 @@
     <script type="application/x-javascript">
     var loadMenu = true;
     var loadCart = false;
+    var showCheckoutModal = false;
     </script>
     <script type="text/javascript" src="js/constants.js"></script>
     <script src="js/menu.js"> </script>
