--- a/www/view_cart.html
+++ b/www/view_cart.html
@@ -63,6 +63,7 @@
     <script type="application/x-javascript">
     var loadMenu = false;
     var loadCart = true;
+    var showCheckoutModal = false;
     </script>
     <script type="text/javascript" src="js/constants.js"></script>
     <script src="js/menu.js"> </script>
