add all new changes, and promo codes, plus on resum alert

--- a/www/view_cart.html
+++ b/www/view_cart.html
@@ -30,10 +30,15 @@
    <script type="text/javascript">
        app.initialize();
    </script>
+   <style>
+   .container {
+     margin-top: -20px;
+   }
+   </style>
 	<header id="header">
         <div class="navbar navbar-inverse" role="banner">
             <div class="container">
-                <div class="navbar-header">
+                <div class="navbar-header" style="vertical-align: top;">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
@@ -41,17 +46,17 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <span class="navbar-brand" id="cartTotal">
-                    	Cart: $0.00 (0 Items)
-                    </span>
-
+                    <a href="view_cart.html" style="margin-top: 15px;" class="btn btn-sm btn-default">
+                       <i class="fa fa-shopping-cart"></i>&nbsp;&nbsp;&nbsp;
+                       <span id="cartTotal">$0.00 (0 items)</span>
+                    </a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li class="active"><a href="view_cart.html">View Cart</a></li>
-                        <li><a href="pusher.html">Login/Logout</a></li>
+                        <li><a href="shortcodes.html">Login/Logout</a></li>
                         <li><a href="previous_order.html">Previous Orders</a></li>
                         <li><a href="contact_us.html">Contact Us</a></li>
                     </ul>
@@ -61,120 +66,64 @@
     </header>
     <!--/#header-->
     <script type="application/x-javascript">
-    var loadMenu = false;
-    var loadCart = true;
-    var showCheckoutModal = false;
+    var page = "view_cart";
     </script>
     <script type="text/javascript" src="js/constants.js"></script>
     <script src="js/menu.js"> </script>
     <style>
     </style>
     <section id="services">
-        <div class="container">
-           <div style="center">
-              <div id="carousel-container">
-                 <h2 class="page-header">Cart</h2>
-                 <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-                     <form id="cartForm" action="#" method="POST">
-                        <div id="cartTable" class="cartTable">
-                          <div class="cartTableRow">
-                             <div class="cell">
-                                <div id="cartTable-items" class="cartTable">
-                                   <div class="cartTableHeading">
-                                      <div class="cell">Item</div>
-                                      <div class="cell-middle">Quantity</div>
-                                      <div class="cell-right">Price</div>
-                                   </div>
-                                   <!-- <div class="cartTableRow">
-                                      <div class="cell">Whatta-Burger with Cheese</div>
-                                      <div class="cell-middle">
-                                         <input type="text" id="item_1_quantity" size="4" name="item_1_quantity" value="2">&nbsp;&nbsp;
-                                         <input type="button" onclick="updateCart('1'); return false;" name="btnUpdateCart" class="btn btn-xs btn-primary" value="Update Cart">&nbsp;
-                                         <input type="button" onclick="removeItemFromCart('1'); return false;" name="btnRemoveCart" class="btn btn-xs btn-danger" value="Remove">
-                                      </div>
-                                      <div class="cell-right">$4.25</div>
-                                   </div>
-                                   <div class="cartTableRow">
-                                      <div class="cell">Whatta-Burger with Cheese</div>
-                                      <div class="cell-middle">
-                                         <input type="text" id="item_2_quantity" size="4" name="item_2_quantity" value="2">&nbsp;&nbsp;
-                                         <input type="button" onclick="updateCart('2'); return false;" name="btnUpdateCart" class="btn btn-xs btn-primary" value="Update Cart">&nbsp;
-                                         <input type="button" onclick="removeItemFromCart('2'); return false;" name="btnRemoveCart" class="btn btn-xs btn-danger" value="Remove">
-                                      </div>
-                                      <div class="cell-right">$4.25</div>
-                                   </div> -->
-                                </div>
-                             </div>
-                          </div>
-                          <div class="cartTableRow">
-                             <div class="cell" style="border-top: 1px black solid">
-                                <div style="float: left; font-weight: bold;">
-                                   Enter Promotion or Coupon Code<br>
-                                   <input type="text" id="txtPromo" value="">&nbsp;&nbsp;&nbsp;
-                                   <input type="button" id="btnAddPromo" name="btnAddPromo" class="btn btn-xs btn-primary" value="Add Code" onclick="addPromoCode(); return false;">
-                                </div>
-                                <div class="spacer">&nbsp;</div>
-                                <div class="total">Sub-Total:&nbsp;&nbsp;$<span id="cart-subTotal">0.00</span></div><br>
-                                <div class="spacer">&nbsp;</div>
-                                <div class="total">Discount:&nbsp;&nbsp;$<span id="cart-discount">0.00</span></div><br>
-                                <div class="spacer">&nbsp;</div>
-                                <div class="total">Tax:&nbsp;&nbsp;$<span id="cart-tax">0.00</span></div><br>
-                                <div class="spacer">&nbsp;</div>
-                                <div class="total">Total:&nbsp;&nbsp;$<span id="cart-total">0.00</span></div>
-                                <br>
-                                <div class="total"><a href="checkout.html" class="btn btn btn-success">Checkout</a></div>
-                                <div class="spacer">&nbsp;</div>
-                             </div>
-                          </div>
+        <div class="container" style="margin-top: -70px;">
+            <h2 class="page-header">Cart</h2>
+            <form id="cartForm" action="#" method="POST">
+              <!-- <div class="view-cart-item-table">
+                <div class="view-cart-item-table-row">
+                  <div class="view-cart-item-table-cell-top-left"><p class="view-cart-item-header">Whatta-Burger with Cheese</p>
+                     <p>Here are a list of the condiments associated with the item, if any</p>
+                  </div>
+                  <div class="view-cart-item-table-cell-top-right view-cart-strong">$<span id="item-price">4.25</span></div>
+                </div>
+                <div class="view-cart-item-table-row">
+                  <div class="view-cart-item-table-cell-bottom-left">
+                     <button type="button" onclick="incrementCart('1'); return false;" name="btnUpdateCart" class="btn btn-primary">&nbsp;<i class="fa fa-plus"></i>&nbsp;</button>&nbsp;&nbsp;
+                     <button type="button" onclick="decrementCart('1'); return false;" name="btnUpdateCart" class="btn btn-danger">&nbsp;<i class="fa fa-minus"></i>&nbsp;</button>&nbsp;&nbsp;&nbsp;
+                     Quantity&nbsp;&nbsp;<span class="view-cart-strong" id="itemid_1_quantity">2<span>
+                  </div>
+                  <div class="view-cart-item-table-cell-bottom-right">
+                     <button type="button" onclick="removeItemFromCart('1'); return false;" name="btnRemoveCart" class="btn btn-danger">&nbsp;<i class="fa fa-trash"></i>&nbsp;</button>
+                  </div>
+                </div>
+             </div> -->
+           </form>
+           <br>
+           <div>
+                 <div style="display: table; width: 100%;">
+                    <div style="display: table-row;">
+                       <div style="display: table-cell; width: 50%;">
+                          <div style="font-weight: bold;">
+                            Promo/Coupon Code<br>
+                            <input type="text" id="txtPromo" value="" size="15">&nbsp;&nbsp;&nbsp;
+                            <input type="button" id="btnAddPromo" name="btnAddPromo" class="btn btn-xs btn-primary"
+                            value="Add Code" onclick="addPromoCode(); return false;">&nbsp;&nbsp;
+                            <input type="button" id="btnRemovePromo" name="btnRemovePromo" class="btn btn-xs btn-primary"
+                            value="Remove Code" onclick="removePromoCode(); return false;">
+                         </div>
                        </div>
-
-           <style>
-           .spacer {
-           float: right;
-           width: 10px;
-           }
-           .total {
-           float: right;
-           font-weight: bold;
-           }
-           .cartTable {
-           display: table;
-           width: 100%;
-           }
-           .cartTable-item {
-           display: table;
-           width: 100%;
-           border-bottom: 1px #000 solid;
-           }
-           .cartTableHeading {
-           display: table-row;
-           font-weight: bold;
-           font-size: larger;
-           border-bottom: 1px #000 solid;
-           }
-           .cartTableRow {
-           display: table-row;
-           }
-           .cell {
-           display: table-cell;
-           padding: 5px;
-           }
-           .cell-right {
-           display: table-cell;
-           padding: 5px;
-           padding-right: 10px;
-           text-align: right;
-           }
-           .cell-middle {
-           display: table-cell;
-           padding: 5px;
-           text-align: center;
-           }
-           </style>
-
-                     </form>
+                       <div style="display: table-cell; width: 50%;">
+                            <div class="view-cart-spacer">&nbsp;</div>
+                            <div class="view-cart-total">Sub-Total:&nbsp;&nbsp;$<span id="cart-subTotal">0.00</span></div>
+                            <div class="view-cart-spacer">&nbsp;</div>
+                            <div class="view-cart-total"><span id="cart-promo-discount-text">Discount</span>:&nbsp;&nbsp;$<span id="cart-discount">0.00</span></div>
+                            <div class="view-cart-spacer">&nbsp;</div>
+                            <div class="view-cart-total">Tax:&nbsp;&nbsp;$<span id="cart-tax">0.00</span></div>
+                            <div class="view-cart-spacer">&nbsp;</div>
+                            <div class="view-cart-total">Total:&nbsp;&nbsp;$<span id="cart-total">0.00</span></div>
+                            <br>
+                            <div class="view-cart-total"><a href="checkout.html" class="btn btn btn-success">Checkout</a></div>
+                            <div class="view-cart-spacer">&nbsp;</div>
+                       </div>
+                    </div>
                  </div>
-              </div>
            </div>
         </div>
         <p></p>
@@ -186,16 +135,33 @@
                  <h4 class="modal-title">Update Cart</h4>
                </div>
                <div class="modal-body">
-                 <p>You are about to delete the item from the cart. Click "Delete Item" to continue. Click "Cancel" to keep the item.</p>
+                 <p>You are about to delete the item from the cart. Click "Delete Item" to continue.</p>
                  <input type="hidden" id="modalItemId" value="">
                </div>
                <div class="modal-footer">
-                 <button type="button" class="btn btn-primary" data-dismiss="modal">Cancel</button>
+                 <button type="button" class="btn btn-primary" data-dismiss="modal">Keep Item</button>
                  <button type="button" class="btn btn-danger" onclick="removeItemFromCart()" >Delete Item</button>
                </div>
              </div><!-- /.modal-content -->
            </div><!-- /.modal-dialog -->
          </div><!-- /.modal -->
+         <div id="promoModal" class="modal fade">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title">Update Cart</h4>
+                </div>
+                <div class="modal-body">
+                  <p>Promotional Code discount has been applied.</p>
+                  <input type="hidden" id="modalItemId" value="">
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+                </div>
+              </div><!-- /.modal-content -->
+            </div><!-- /.modal-dialog -->
+          </div><!-- /.modal -->
          <div id="errorModal" class="modal fade">
             <div class="modal-dialog">
               <div class="modal-content">
