--- a/www/checkout.html
+++ b/www/checkout.html
@@ -30,6 +30,11 @@
    <script type="text/javascript">
        app.initialize();
    </script>
+   <style>
+   .container {
+     margin-top: -20px;
+   }
+   </style>
 	<header id="header">
         <div class="navbar navbar-inverse" role="banner">
             <div class="container">
@@ -41,14 +46,14 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <span class="navbar-brand" id="cartTotal">
-                    	Cart: $0.00 (x Items)
-                    </span>
-
+                    <a href="view_cart.html" style="margin-top: 15px;" class="btn btn-sm btn-default">
+                       <i class="fa fa-shopping-cart"></i>&nbsp;&nbsp;&nbsp;
+                       <span id="cartTotal">$0.00 (0 items)</span>
+                    </a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="view_cart.html">View Cart</a></li>
                         <li><a href="shortcodes.html">Login/Logout</a></li>
@@ -61,8 +66,7 @@
     </header>
     <!--/#header-->
     <script type="application/x-javascript">
-    var loadMenu = false;
-    var loadCart = false;
+    var page = "checkout";
     </script>
     <script type="text/javascript" src="js/constants.js"></script>
     <script src="js/menu.js"> </script>
@@ -82,7 +86,8 @@
     }
     </style>
     <section id="services">
-      <div class="container">
+      <div class="container" style="margin-top: -70px;">
+         <h2 class="page-header">Checkout</h2>
          <div class="row">
              <div class="col-sm-12">
                  <div id="order-summary" class="testimonial bottom">
