--- a/www/index.html
+++ b/www/index.html
@@ -30,6 +30,11 @@
    <script type="text/javascript">
        app.initialize();
    </script>
+   <style>
+   .container {
+     margin-top: -20px;
+   }
+   </style>
 	<header id="header">
         <div class="navbar navbar-inverse" role="banner">
             <div class="container">
@@ -41,17 +46,17 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <span class="navbar-brand" id="cartTotal">
-                    	Cart: $0.00 (x Items)
-                    </span>
-
+                    <a href="view_cart.html" style="margin-top: 15px;" class="btn btn-sm btn-default">
+                       <i class="fa fa-shopping-cart"></i>&nbsp;&nbsp;&nbsp;
+                       <span id="cartTotal">$0.00 (0 items)</span>
+                    </a>
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="view_cart.html">View Cart</a></li>
-                        <li><a href="shortcodes.html">Login/Logout</a></li>
+                        <li><a href="login.html">Login/Logout</a></li>
                         <li><a href="previous_order.html">Previous Orders</a></li>
                         <li><a href="contact_us.html">Contact Us</a></li>
                     </ul>
@@ -61,16 +66,14 @@
     </header>
     <!--/#header-->
     <script type="application/x-javascript">
-    var loadMenu = false;
-    var loadCart = false;
-    var showCheckoutModal = false;
+    var page = "index";
     </script>
     <script type="text/javascript" src="js/constants.js"></script>
     <script src="js/menu.js"> </script>
     <style>
     </style>
     <section id="services">
-        <div class="container">
+        <div class="container" style="margin-top: -70px;" >
            <div class="padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
               <div class="sidebar blog-sidebar">
                  <div class="sidebar-item recent">
