--- a/www/view_cart3.html
+++ b/www/view_cart3.html
@@ -30,11 +30,6 @@
    <script type="text/javascript">
        app.initialize();
    </script>
-   <style>
-   .container {
-     margin-top: -20px;
-   }
-   </style>
 	<header id="header">
         <div class="navbar navbar-inverse" role="banner">
             <div class="container">
@@ -46,17 +41,17 @@
                         <span class="icon-bar"></span>
                     </button>
 
-                    <a href="view_cart.html" style="margin-top: 15px;" class="btn btn-sm btn-default">
-                       <i class="fa fa-shopping-cart"></i>&nbsp;&nbsp;&nbsp;
-                       <span id="cartTotal">$0.00 (0 items)</span>
-                    </a>
+                    <span class="navbar-brand" id="cartTotal">
+                    	Cart: $0.00 (0 Items)
+                    </span>
+
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
-                        <li class="active"><a href="menu.html">Menu</a></li>
-                        <li><a href="view_cart.html">View Cart</a></li>
-                        <li><a href="shortcodes.html">Login/Logout</a></li>
+                        <li><a href="menu.html">Menu</a></li>
+                        <li class="active"><a href="view_cart.html">View Cart</a></li>
+                        <li><a href="pusher.html">Login/Logout</a></li>
                         <li><a href="previous_order.html">Previous Orders</a></li>
                         <li><a href="contact_us.html">Contact Us</a></li>
                     </ul>
@@ -66,40 +61,40 @@
     </header>
     <!--/#header-->
     <script type="application/x-javascript">
-    var page = "menu";
+    var loadMenu = false;
+    var loadCart = true;
     </script>
     <script type="text/javascript" src="js/constants.js"></script>
     <script src="js/menu.js"> </script>
+    <style>
+    </style>
     <section id="services">
-        <div class="container" style="margin-top: -70px;">
-           <div id="accordion-container">
-               <h2 class="page-header">Menu</h2>
-               <div class="panel-group" id="accordion">
-               </div>
-           </div>
-           <div id="myModal" class="modal fade">
-              <div class="modal-dialog">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <h4 class="modal-title">Update Cart</h4>
-                  </div>
-                  <div class="modal-body">
-                    <p id="modal-message">The item has been added to the cart.</p>
-                  </div>
-                  <div class="modal-footer">
-                    &nbsp;
-                  </div>
-                </div>
-              </div>
-           </div>
-        </div>
+        <div class="container">
+           <h2 class="page-header">Cart</h2>
+                        <div class="checkout-item-table">
+                           <div class="checkout-item-table-row">
+                             <div class="checkout-item-table-cell-top-left"><h3>Whatta-Burger with Cheese</h3>
+                                <p>Here are a list of the condiments associated with the item, if any</p>
+                             </div>
+                             <div class="checkout-item-table-cell-top-right checkout-strong">$<span id="item-price">4.25</span></div>
+                           </div>
+                           <div class="checkout-item-table-row">
+                             <div class="checkout-item-table-cell-bottom-left">
+                                <button type="button" onclick="updateCart('1'); return false;" name="btnUpdateCart" class="btn btn-primary">&nbsp;<i class="fa fa-plus"></i>&nbsp;</button>&nbsp;&nbsp;
+                                <button type="button" onclick="updateCart('1'); return false;" name="btnUpdateCart" class="btn btn-danger">&nbsp;<i class="fa fa-minus"></i>&nbsp;</button>&nbsp;&nbsp;&nbsp;
+                                Quantity&nbsp;&nbsp;<span class="checkout-strong" id="item_1_quantity">2<span>
+                             </div>
+                             <div class="checkout-item-table-cell-bottom-right">
+                                <button type="button" onclick="removeItemFromCart('1'); return false;" name="btnRemoveCart" class="btn btn-danger">&nbsp;<i class="fa fa-trash"></i>&nbsp;</button>
+                             </div>
+                           </div>
+                        </div>
+
+
+
+
     </section>
     <!--/#footer-->
-    <style>
-    .quantity {
-       font-weight: bold;
-    }
-    </style>
 
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/persist-min.js"></script>
@@ -107,5 +102,6 @@
     <script type="text/javascript" src="js/lightbox.min.js"></script>
     <script type="text/javascript" src="js/wow.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/cart.js"></script>
 </body>
 </html>
