modified changes to ajax retrieval, app resume and general ui changes

--- a/www/index.html
+++ b/www/index.html
@@ -73,71 +73,13 @@
     <style>
     </style>
     <section id="services">
-        <div class="container" style="margin-top: -70px;" >
-           <div class="padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
-              <div class="sidebar blog-sidebar">
-                 <div class="sidebar-item recent">
-                    <h3 style="text-align: center;"><font color="Green">Hungry?</font></h3>
-                    <div class="media">
-                       <div class="pull-left">
-                          <a href="menu.html" class="btn btn-common-mine-blue">View<br>Menu</a>
-                       </div>
-                       <div class="media-body sidebar-item-mine-blue">
-                          <h4><a href="menu.html">Here's the deal. It's the simplist way to order your Whatta Burger.</a></h4>
-                          <p><ol>
-                             <li>Browse the menu</li>
-                             <li>Add your items to the cart</li>
-                             <li>Checkout</li>
-                          </ol></p>
-                       </div>
-                    </div>
-                    <div class="media" id="current_promotions">
-                       <div class="pull-left ">
-                          <a href="menu.html" class="btn btn-common-mine-blue">Current<br>Promo's</a>
-                       </div>
-                       <div class="media-body">
-                          <h4><a href="#">Check out our current coupons and promotions.</a></h4>
-                       </div>
-                    </div>
-                    <div class="media">
-                       <div class="pull-left">
-                          <a href="menu.html" class="btn btn-common-mine-blue">Previous<br>Orders</a>
-                       </div>
-                       <div class="media-body">
-                          <h4><a href="#">Check out your previous orders for easy ordering.</a></h4>
-                          <p>
-                             One of the benefits of being a registered user is the option to keep track of your order history.
-                             Keeping track of your order history provides a quick way to order that lunch time meal giving you
-                             some extra time back in your day!
-                          </p>
-                       </div>
-                    </div>
-                 </div>
-              </div>
-           </div>
-           <div style="center">
-              <div class="text-center padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
-                 <div class="single-service" style="verticle-align: center;">
-                    <h2>Login</h2>
-                    <div class="wow scaleIn" data-wow-duration="500ms" data-wow-delay="900ms">
-                       <div class="contact-form bottom">
-                          <form id="main-contact-form" name="contact-form" method="post" action="sendemail.php">
-                             <div class="form-group">
-                                <input type="email" name="email" class="form-control" required="required" placeholder="Email">
-                             </div>
-                             <div class="form-group">
-                                <input type="password" name="password" class="form-control" required="required" placeholder="Password">
-                             </div>
-                             <div class="form-group">
-                                <input type="submit" name="submit" class="btn btn-primary" value="Login">&nbsp;&nbsp;&nbsp;
-                                <input type="submit" name="submit" class="btn btn-success" value="Register"><br>
-                                <input type="submit" name="submit" class="btn btn-danger" value="Continue As Guest">
-                             </div>
-                          </form>
-                       </div>
-                    </div>
-                 </div>
-              </div>
+        <div class="container" style="width: 100; margin-top: -70px;" >
+           <div class="center" style="text-align: center">
+              <p></p>
+              <p><h2>Welcome to the Whatt-Burger Restaurnt Application</h2></p>
+              <p>&nbsp;</p>
+              <p><img id="loading-image" src="images/loading.gif" alt="Loading..." /></p>
+              <p><h3>Please wait while we prepare your menu.</h3></p>
            </div>
         </div>
     </section>
