--- a/www/checkout.html
+++ b/www/checkout.html
@@ -53,10 +53,10 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="home.html">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li><a href="view_cart.html">View Cart</a></li>
-                        <li><a href="shortcodes.html">Login/Logout</a></li>
+                        <li><a href="login.html">Login/Logout</a></li>
                         <li><a href="previous_order.html">Previous Orders</a></li>
                         <li><a href="contact_us.html">Contact Us</a></li>
                     </ul>
