--- a/www/previous_order.html
+++ b/www/previous_order.html
@@ -43,11 +43,11 @@
             </div>
             <div class="collapse navbar-collapse">
                <ul class="nav navbar-nav navbar-right">
-                  <li class="active"><a href="index.html">Home</a></li>
+                  <li><a href="home.html">Home</a></li>
                   <li><a href="menu.html">Menu</a></li>
-                  <li><a href="shortcodes.html">View Cart</a></li>
-                  <li><a href="shortcodes.html">Login/Logout</a></li>
-                  <li><a href="previous_order.html">Previous Orders</a></li>
+                  <li><a href="view_cart.html">View Cart</a></li>
+                  <li><a href="login.html">Login/Logout</a></li>
+                  <li class="active"><a href="previous_order.html">Previous Orders</a></li>
                   <li><a href="contact_us.html">Contact Us</a></li>
                </ul>
             </div>
@@ -55,6 +55,9 @@
       </div>
    </header>
    <!--/#header-->
+   <script type="application/x-javascript">
+   var page = "previous_order";
+   </script>
    <section id="services">
       <div class="container">
          <div class="padding wow fadeIn" data-wow-duration="1000ms" data-wow-delay="900ms">
