--- a/www/view_cart.html
+++ b/www/view_cart.html
@@ -53,10 +53,10 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="home.html">Home</a></li>
                         <li><a href="menu.html">Menu</a></li>
                         <li class="active"><a href="view_cart.html">View Cart</a></li>
-                        <li><a href="shortcodes.html">Login/Logout</a></li>
+                        <li><a href="login.html">Login/Logout</a></li>
                         <li><a href="previous_order.html">Previous Orders</a></li>
                         <li><a href="contact_us.html">Contact Us</a></li>
                     </ul>
@@ -103,9 +103,9 @@
                           <div style="font-weight: bold;">
                             Promo/Coupon Code<br>
                             <input type="text" id="txtPromo" value="" size="15">&nbsp;&nbsp;&nbsp;
-                            <input type="button" id="btnAddPromo" name="btnAddPromo" class="btn btn-xs btn-primary"
+                            <input type="button" id="btnAddPromo" name="btnAddPromo" class="btn btn-primary"
                             value="Add Code" onclick="addPromoCode(); return false;">&nbsp;&nbsp;
-                            <input type="button" id="btnRemovePromo" name="btnRemovePromo" class="btn btn-xs btn-primary"
+                            <input type="button" id="btnRemovePromo" name="btnRemovePromo" class="btn btn-primary"
                             value="Remove Code" onclick="removePromoCode(); return false;">
                          </div>
                        </div>
